--- a/app/src/main/res/layout/offering_list_item.xml
+++ b/app/src/main/res/layout/offering_list_item.xml
@@ -23,6 +23,12 @@
             android:id="@+id/offeringListTitleTextView" />
 
         <!--TODO (1): Add a TextView named offeringListCRNTextView to the layout underneath the offeringListCourseTitleTextView -->
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/offeringListCRNTextView" />
+
 
     </LinearLayout>
 
